# petrinex-python-api

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  WHY_BUG_NOT_CAUGHT.md  databricks_example.ipynb  example.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: README.md  publish-to-pypi.yml  publish-to-test-pypi.yml  test.yml
petrinex/: __init__.py  client.py  schema.py
tests/: README.md  __init__.py  manual_e2e_test.py  test_client.py  test_integration.py  test_schema.py  test_schema_conversion.py
