[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petrinex"
version = "0.1.0"
description = "Python client for Petrinex Conventional Volumetric data with Spark integration"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["petrinex", "oil", "gas", "volumetrics", "spark", "databricks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0",
    "pandas>=1.2.0",
    "requests>=2.25.0",
    "pyspark>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/petrinex-python-api"
Documentation = "https://github.com/yourusername/petrinex-python-api#readme"
Repository = "https://github.com/yourusername/petrinex-python-api"

[tool.setuptools.packages.find]
where = ["."]
include = ["petrinex*"]
exclude = ["tests*", "docs*"]

