[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petrinex"
version = "0.1.0"
description = "Memory-efficient Python client for loading Alberta Petrinex volumetric data into Spark DataFrames"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Petrinex Python API Contributors"}
]
keywords = [
    "petrinex",
    "alberta",
    "oil",
    "gas",
    "volumetrics",
    "spark",
    "databricks",
    "unity-catalog",
    "energy-data"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0",
    "pandas>=1.2.0",
    "requests>=2.25.0",
    "pyspark>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/petrinex-python-api"
Documentation = "https://github.com/yourusername/petrinex-python-api#readme"
Repository = "https://github.com/yourusername/petrinex-python-api"

[tool.setuptools.packages.find]
where = ["."]
include = ["petrinex*"]
exclude = ["tests*", "docs*"]

